# AdatszerkHelp

./: .gitignore  README.md
2019/hf01/: CMakeLists.txt  fixedSizePool.hpp  main.cpp
2019/khf01/: CMakeLists.txt  framework.hpp  main.cpp  problem1.hpp  problem2.hpp
2019/khf02/: CMakeLists.txt  exception.hpp  main.cpp  train.hpp  tree_parser.hpp
2019/khf03/: heavy_hitters.hpp  rmq.hpp
Kotel_eclipse/: .cproject  .project
Kotel_eclipse/src/: Kotel_eclipse.cpp
Rendezesek_mo/: .cproject  .project
Rendezesek_mo/src/: main.cpp  sorts.hpp
hf01/: CMakeLists.txt  dynamicPool.hpp  fixedSizePool.hpp  main.cpp
new_khf01/: CMakeLists.txt  main.cpp  main_pre_cpp17.cpp  problem1.hpp  problem2.hpp
pot/: .cproject  .project
pot/src/: heap_sort.hpp  introSort.hpp  pot.cpp  quicksort.hpp
rope/: CMakeLists.txt
rsa/: .cproject
rsa/src/: rsa.cpp
